[gd_scene load_steps=4 format=3 uid="uid://d3oxhpt6cstl6"]

[ext_resource type="Script" uid="uid://o2fobt62lq6p" path="res://button.gd" id="1_3mqji"]
[ext_resource type="Texture2D" uid="uid://b8ugrrt2bhev5" path="res://Gallo-PNG-Pic.png" id="2_rpqi1"]
[ext_resource type="Texture2D" uid="uid://cmyi6da1curq5" path="res://a97743bfab2839b35c5a91f670342691-removebg-preview.png" id="3_rpqi1"]

[node name="MainScene" type="Node2D"]
position = Vector2(74, 67)

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 2.0
offset_top = -10.0
offset_right = 389.0
offset_bottom = 507.0
color = Color(0.753171, 0.503057, 9.62615e-07, 1)
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
offset_left = 145.0
offset_top = 53.0
offset_right = 257.0
offset_bottom = 76.0
scale = Vector2(0.876439, 1.13759)
text = "Gallo Gamble"
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="."]
offset_left = 94.0
offset_top = 93.0
offset_right = 298.0
offset_bottom = 152.0
text = "Coin flip Fight"
script = ExtResource("1_3mqji")
metadata/_edit_use_anchors_ = true

[node name="roosterA" type="Sprite2D" parent="."]
position = Vector2(118.141, 365.578)
scale = Vector2(0.527438, 0.479378)
texture = ExtResource("2_rpqi1")

[node name="roosterB" type="Sprite2D" parent="."]
position = Vector2(330, 372)
scale = Vector2(0.681896, 0.591629)
texture = ExtResource("3_rpqi1")

[node name="ResultLabel" type="Label" parent="."]
offset_left = 118.0
offset_top = 169.0
offset_right = 284.0
offset_bottom = 212.0
metadata/_edit_use_anchors_ = true

[node name="Button2" type="Button" parent="."]
offset_left = 96.0
offset_top = 166.0
offset_right = 298.0
offset_bottom = 230.0
text = "Arena Fight"
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]

[connection signal="pressed" from="Button" to="Button" method="_on_pressed"]
[connection signal="pressed" from="Button" to="Button" method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="Button" method="_on_Button2_pressed"]
